--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,1 @@
-#----------------------- CONFIGURACIÓN GLOBAL --------------------------------
-#Nombre de la aplicación definido.
-spring.application.name=Crud Basico de Gestion de Pedidos 
-
-#---------------------- CONFIGURACIÓN BD -------------------------------------
-#Configuro la URL de la BD ya que lo inicie con el Spring Initializr.
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestionpedidoscrud
-#Configuro nombre de usuario.
-spring.datasource.username=postgres
-#Configuro el password de la BD.
-spring.datasource.password=1234
-#Configuración para crear las tablas de los models y poder hacer las persistencias con Hibernate en la BD.
-spring.jpa.hibernate.ddl-auto=update
-
-#---------------------- CONFIGURACIÓN THYMELEAF -------------------------------------
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
+spring.profiles.active=@profileActive@
