:sparkles: Customización login spring security
Detalles adicionales:
💄 Se personaliza el formulario del login que trae por defecto spring security por uno propio agregados en los archivos css y html del login.
🚚 Se modifica las rutas del método login y de la clase LoginController.
⬆️ Se actualiza la dependencia de Spring Security
🔒️ Se modifican los métodos de la clase
SeguridadAppConfig.

--- a/pom.xml
+++ b/pom.xml
@@ -67,20 +67,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<!--Dependencias de seguridad-->
-
-		<!-- spring-security-web -->
+		<!-- Dependencia de seguridad -->
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>${springsecurity.version}</version>
-		</dependency>
-
-		<!-- spring-security-config -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>${springsecurity.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	</dependencies>
 
